2009-01-01 17:41-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Modules/Debuggers/ProjectCenter/Resources/Info.table: Add blank
	to file extension so that tools can be debugged as well.

2009-01-01 16:05-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Modules/Debuggers/ProjectCenter/Resources/PCDebugger.gorm:
	Change the status bar size and set minimum window size.

2009-01-01 13:08-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Modules/Debuggers/ProjectCenter/GNUmakefile
	* Modules/Debuggers/ProjectCenter/PTYView.h
	* Modules/Debuggers/ProjectCenter/PTYView.m: Change code to use
	openpty(...).

2008-12-31  Sergii Stoian <stoyan255@gmail.com>
	
	* Framework/PCFileNameIcon.m:
	* Headers/ProjectCenter/PCFileNameIcon.h:
	  Implementation of dragging functionality.

	* Framework/PCProjectBrowser.m: Implement file icon delegate methods.
	  Dragging files to category icon adds files to project.

2008-12-30 Richard frith-Macdonald <rfm"gnu.org>

	* PCMenuController.m:
	* Framework/PCProjectManager.m:
	* Framework/PCBundleManager.m:
	* Framework/PCMakefileFactory.m:
	* Framework/PCProject.m:
	* Framework/PCProjectLauncherPanel.m:
	* Framework/PCFileManager.m:
	* Framework/PCButton.m:
	* Framework/PCProjectBuilder.m:
	* Framework/PCProjectLoadedFilesPanel.m:
	* Framework/PCFileNameField.m:
	* Framework/PCSplitView.m:
	* Framework/PCProjectLauncher.m:
	* Framework/PCAddFilesPanel.m:
	* Framework/Resources/class.template:
	* Framework/Resources/header.template:
	* Framework/Resources/cfile.template:
	* Framework/PCProjectBuilderPanel.m:
	* Framework/PCFileCreator.m:
	* PCAppController.m:
	* PCFindController.m:
	* ProjectCenter_main.m:
	* Modules/Parsers/ProjectCenter/ObjCMethodHandler.h:
	* Modules/Parsers/ProjectCenter/ObjCCommentHandler.h:
	* Modules/Parsers/ProjectCenter/PCParser.h:
	* Modules/Parsers/ProjectCenter/ObjCClassHandler.h:
	* Modules/Parsers/ProjectCenter/ObjCMethodHandler.m:
	* Modules/Parsers/ProjectCenter/ObjCCommentHandler.m: